1998-09-28  Ettore Perazzoli  <ettore@comm2000.it>

	* Makefile.am (libgnomeui_la_SOURCES): Added `gnome-animator.c'.
	(libgnomeuiinclude_HEADERS): Added `gnome-animator.h'.
	(noinst_PROGRAMS): Added `animator_demo'.
	(animator_demo_SOURCES, animator_demo_LDADD): New variables for
	compiling `animator_demo'.

	* libgnomeui.h: #Include "gnome-animator.h".

	* animator_demo.c: New file: simple demo for `GnomeAnimator'.  It
 	currently requires some images from `gnome-core'...  I'll have to
 	fix this.

	* gnome-animator.c, gnome-animator.h: New files: new
 	`GnomeAnimator' widget.

1998-09-27  Havoc Pennington  <hp@pobox.com>

	* gnome-actionarea.h, gnome-actionarea.c: Removed.
	* Makefile.am, libgnomeui.h: Changed accordingly.

1998-09-27  Raja R Harinath  <harinath@cs.umn.edu>

	`automake' 1.3b and older have a bug with handling continuation 
	lines inside conditionals.
	* Makefile.am (gtkcal_headers): Don't use continuation lines.
	(gtkcal_sources): Likewise.
	(EXTRA_libgnomeui_la_SOURCES): List gtkcalendar.[ch].
	
1998-09-28  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-messagebox.c (gnome_message_box_new): Fixed some memory
 	leaks.

1998-09-27  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-scores.c (gnome_scores_set_colors,
	gnome_socres_set_def_color, gnome_scores_new): Use unsigned ints
	here. 

	* gnome-preferences.c (gnome_preferences_set_button_layout):
	Unsigned int warning fix.

	* gnome-properties.c
	(gnome_property_configurator_request_foreach): Unsigned int
	warning fix.

	* gnome-init.h: New file.  Move gnome-init declarations here.

	* gnome-dns.c (struct): Use guint32 for the tag

	* gnome-color-selector.c (color_dropped): Use usngined int

	* gnome-dentry-edit.c: Include <string.h>

Sun Sep 27 16:54:33 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.[ch]: still fiddling with this f**king background
	colors. changed GnomeStock structure.
	* gnome-stock.c (create_pixmap_from_imlib_scaled): check via