@@ -1,3 +1,8 @@
+1998-09-28  Havoc Pennington  <hp@pobox.com>
+
+	* gnome-animator.c, gnome-animator.h: Misspell private, so C++
+	doesn't complain.
+
 1998-09-28  Ettore Perazzoli  <ettore@comm2000.it>
 
 	* Makefile.am (libgnomeui_la_SOURCES): Added `gnome-animator.c'.
